infrastructure/cdk.out/YogaGoNetworkStack.template.json
{
  "Description": "Network infrastructure for Yoga-GO application",
  "Resources": {
    "YogaGoVpcF15D7027": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/Resource"
      }
    },
    "YogaGoVpcPublicSubnet1SubnetD3F314A2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "ap-southeast-2a",
        "CidrBlock": "10.0.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet1"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet1/Subnet"
      }
    },
    "YogaGoVpcPublicSubnet1RouteTable2D716891": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet1"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet1/RouteTable"
      }
    },
    "YogaGoVpcPublicSubnet1RouteTableAssociation037C3999": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "YogaGoVpcPublicSubnet1RouteTable2D716891"
        },
        "SubnetId": {
          "Ref": "YogaGoVpcPublicSubnet1SubnetD3F314A2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "YogaGoVpcPublicSubnet1DefaultRoute15F05D54": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "YogaGoVpcIGW4EFB3033"
        },
        "RouteTableId": {
          "Ref": "YogaGoVpcPublicSubnet1RouteTable2D716891"
        }
      },
      "DependsOn": ["YogaGoVpcVPCGWF795E391"],
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet1/DefaultRoute"
      }
    },
    "YogaGoVpcPublicSubnet1EIP1B4E942A": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet1"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet1/EIP"
      }
    },
    "YogaGoVpcPublicSubnet1NATGateway977B96DB": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": ["YogaGoVpcPublicSubnet1EIP1B4E942A", "AllocationId"]
        },
        "SubnetId": {
          "Ref": "YogaGoVpcPublicSubnet1SubnetD3F314A2"
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet1"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ]
      },
      "DependsOn": [
        "YogaGoVpcPublicSubnet1DefaultRoute15F05D54",
        "YogaGoVpcPublicSubnet1RouteTableAssociation037C3999"
      ],
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet1/NATGateway"
      }
    },
    "YogaGoVpcPublicSubnet2SubnetB712836A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "ap-southeast-2b",
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet2"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet2/Subnet"
      }
    },
    "YogaGoVpcPublicSubnet2RouteTableDF95FD07": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet2"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet2/RouteTable"
      }
    },
    "YogaGoVpcPublicSubnet2RouteTableAssociation9EA130C2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "YogaGoVpcPublicSubnet2RouteTableDF95FD07"
        },
        "SubnetId": {
          "Ref": "YogaGoVpcPublicSubnet2SubnetB712836A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "YogaGoVpcPublicSubnet2DefaultRoute3BACB8B9": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "YogaGoVpcIGW4EFB3033"
        },
        "RouteTableId": {
          "Ref": "YogaGoVpcPublicSubnet2RouteTableDF95FD07"
        }
      },
      "DependsOn": ["YogaGoVpcVPCGWF795E391"],
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PublicSubnet2/DefaultRoute"
      }
    },
    "YogaGoVpcPrivateSubnet1Subnet46CA2612": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "ap-southeast-2a",
        "CidrBlock": "10.0.2.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet1"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet1/Subnet"
      }
    },
    "YogaGoVpcPrivateSubnet1RouteTable08631F6D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet1"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet1/RouteTable"
      }
    },
    "YogaGoVpcPrivateSubnet1RouteTableAssociation6DF0AC67": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "YogaGoVpcPrivateSubnet1RouteTable08631F6D"
        },
        "SubnetId": {
          "Ref": "YogaGoVpcPrivateSubnet1Subnet46CA2612"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "YogaGoVpcPrivateSubnet1DefaultRouteEDAF2F80": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "YogaGoVpcPublicSubnet1NATGateway977B96DB"
        },
        "RouteTableId": {
          "Ref": "YogaGoVpcPrivateSubnet1RouteTable08631F6D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "YogaGoVpcPrivateSubnet2Subnet32E2BEB5": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "ap-southeast-2b",
        "CidrBlock": "10.0.3.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet2"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet2/Subnet"
      }
    },
    "YogaGoVpcPrivateSubnet2RouteTable0B573A39": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet2"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet2/RouteTable"
      }
    },
    "YogaGoVpcPrivateSubnet2RouteTableAssociation40C1452B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "YogaGoVpcPrivateSubnet2RouteTable0B573A39"
        },
        "SubnetId": {
          "Ref": "YogaGoVpcPrivateSubnet2Subnet32E2BEB5"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "YogaGoVpcPrivateSubnet2DefaultRoute316D2A54": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "YogaGoVpcPublicSubnet1NATGateway977B96DB"
        },
        "RouteTableId": {
          "Ref": "YogaGoVpcPrivateSubnet2RouteTable0B573A39"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "YogaGoVpcIGW4EFB3033": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/IGW"
      }
    },
    "YogaGoVpcVPCGWF795E391": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "YogaGoVpcIGW4EFB3033"
        },
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/VPCGW"
      }
    },
    "YogaGoVpcRestrictDefaultSecurityGroupCustomResource657CE625": {
      "Type": "Custom::VpcRestrictDefaultSG",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": ["CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E", "Arn"]
        },
        "DefaultSecurityGroupId": {
          "Fn::GetAtt": ["YogaGoVpcF15D7027", "DefaultSecurityGroup"]
        },
        "Account": "313060311593"
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete",
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/RestrictDefaultSecurityGroupCustomResource/Default"
      }
    },
    "YogaGoVpcS3Endpoint58E3635C": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "YogaGoVpcPrivateSubnet1RouteTable08631F6D"
          },
          {
            "Ref": "YogaGoVpcPrivateSubnet2RouteTable0B573A39"
          },
          {
            "Ref": "YogaGoVpcPublicSubnet1RouteTable2D716891"
          },
          {
            "Ref": "YogaGoVpcPublicSubnet2RouteTableDF95FD07"
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcEndpointType": "Gateway",
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/S3Endpoint/Resource"
      }
    },
    "YogaGoVpcEcrApiEndpointSecurityGroup019B517A": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "YogaGoNetworkStack/YogaGoVpc/EcrApiEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": ["YogaGoVpcF15D7027", "CidrBlock"]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": ["YogaGoVpcF15D7027", "CidrBlock"]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/EcrApiEndpoint/SecurityGroup/Resource"
      }
    },
    "YogaGoVpcEcrApiEndpointE4EDD8FC": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": ["YogaGoVpcEcrApiEndpointSecurityGroup019B517A", "GroupId"]
          }
        ],
        "ServiceName": "com.amazonaws.ap-southeast-2.ecr.api",
        "SubnetIds": [
          {
            "Ref": "YogaGoVpcPrivateSubnet1Subnet46CA2612"
          },
          {
            "Ref": "YogaGoVpcPrivateSubnet2Subnet32E2BEB5"
          }
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/EcrApiEndpoint/Resource"
      }
    },
    "YogaGoVpcEcrDockerEndpointSecurityGroup319904BE": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "YogaGoNetworkStack/YogaGoVpc/EcrDockerEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": ["YogaGoVpcF15D7027", "CidrBlock"]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": ["YogaGoVpcF15D7027", "CidrBlock"]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/EcrDockerEndpoint/SecurityGroup/Resource"
      }
    },
    "YogaGoVpcEcrDockerEndpoint8F6DCA3E": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": ["YogaGoVpcEcrDockerEndpointSecurityGroup319904BE", "GroupId"]
          }
        ],
        "ServiceName": "com.amazonaws.ap-southeast-2.ecr.dkr",
        "SubnetIds": [
          {
            "Ref": "YogaGoVpcPrivateSubnet1Subnet46CA2612"
          },
          {
            "Ref": "YogaGoVpcPrivateSubnet2Subnet32E2BEB5"
          }
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/EcrDockerEndpoint/Resource"
      }
    },
    "YogaGoVpcCloudWatchLogsEndpointSecurityGroup4B5CDD58": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "YogaGoNetworkStack/YogaGoVpc/CloudWatchLogsEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": ["YogaGoVpcF15D7027", "CidrBlock"]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": ["YogaGoVpcF15D7027", "CidrBlock"]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/CloudWatchLogsEndpoint/SecurityGroup/Resource"
      }
    },
    "YogaGoVpcCloudWatchLogsEndpoint74AEF72E": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": ["YogaGoVpcCloudWatchLogsEndpointSecurityGroup4B5CDD58", "GroupId"]
          }
        ],
        "ServiceName": "com.amazonaws.ap-southeast-2.logs",
        "SubnetIds": [
          {
            "Ref": "YogaGoVpcPrivateSubnet1Subnet46CA2612"
          },
          {
            "Ref": "YogaGoVpcPrivateSubnet2Subnet32E2BEB5"
          }
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/CloudWatchLogsEndpoint/Resource"
      }
    },
    "YogaGoVpcSecretsManagerEndpointSecurityGroup3B434BE9": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "YogaGoNetworkStack/YogaGoVpc/SecretsManagerEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": ["YogaGoVpcF15D7027", "CidrBlock"]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": ["YogaGoVpcF15D7027", "CidrBlock"]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/SecretsManagerEndpoint/SecurityGroup/Resource"
      }
    },
    "YogaGoVpcSecretsManagerEndpoint056C2ACC": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": ["YogaGoVpcSecretsManagerEndpointSecurityGroup3B434BE9", "GroupId"]
          }
        ],
        "ServiceName": "com.amazonaws.ap-southeast-2.secretsmanager",
        "SubnetIds": [
          {
            "Ref": "YogaGoVpcPrivateSubnet1Subnet46CA2612"
          },
          {
            "Ref": "YogaGoVpcPrivateSubnet2Subnet32E2BEB5"
          }
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "production"
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK"
          },
          {
            "Key": "Name",
            "Value": "yoga-go-vpc"
          },
          {
            "Key": "Project",
            "Value": "yoga-go"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "YogaGoVpcF15D7027"
        }
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/YogaGoVpc/SecretsManagerEndpoint/Resource"
      }
    },
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ]
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
          }
        ],
        "Policies": [
          {
            "PolicyName": "Inline",
            "PolicyDocument": {
              "Version": "2012-10-17",
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": [
                    "ec2:AuthorizeSecurityGroupIngress",
                    "ec2:AuthorizeSecurityGroupEgress",
                    "ec2:RevokeSecurityGroupIngress",
                    "ec2:RevokeSecurityGroupEgress"
                  ],
                  "Resource": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:ec2:ap-southeast-2:313060311593:security-group/",
                          {
                            "Fn::GetAtt": ["YogaGoVpcF15D7027", "DefaultSecurityGroup"]
                          }
                        ]
                      ]
                    }
                  ]
                }
              ]
            }
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
      }
    },
    "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-313060311593-ap-southeast-2",
          "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
        },
        "Timeout": 900,
        "MemorySize": 128,
        "Handler": "__entrypoint__.handler",
        "Role": {
          "Fn::GetAtt": ["CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0", "Arn"]
        },
        "Runtime": "nodejs22.x",
        "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
      },
      "DependsOn": ["CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"],
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
        "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
        "aws:asset:property": "Code"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/3WOwW6DQAxEvyX3ZZvS/gBFUZRLi6DiWpnFpE7Ai3a9oCjKv1ckCHLpaTzP45FjHceveruB0UemPkctVfpaCJizgtH/oIn1teyNShsus1RloWrJFKFilImtU26D4DdULa58ZYn31hAIWV7C07A7ZJN8guxBcISLyhwNILgWH1jQMS6BxyezS0TA/HbIomZS9mbHdW+JZY4u9t7UgMHnTIEmOJLL3tnQ319/BjeVo7fBGVRp8GK71Tb8zypzdqAa3Qd4VIn3KIXAkfg43XwF6YPcFNsa9cm/DPG7ftPbzckTRS6wUIc6f+gf1O47zJwBAAA="
      },
      "Metadata": {
        "aws:cdk:path": "YogaGoNetworkStack/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "VpcId": {
      "Description": "VPC ID",
      "Value": {
        "Ref": "YogaGoVpcF15D7027"
      },
      "Export": {
        "Name": "yoga-go-vpc-id"
      }
    },
    "VpcCidr": {
      "Description": "VPC CIDR Block",
      "Value": {
        "Fn::GetAtt": ["YogaGoVpcF15D7027", "CidrBlock"]
      }
    },
    "ExportsOutputRefYogaGoVpcF15D70276593FDC4": {
      "Value": {
        "Ref": "YogaGoVpcF15D7027"
      },
      "Export": {
        "Name": "YogaGoNetworkStack:ExportsOutputRefYogaGoVpcF15D70276593FDC4"
      }
    },
    "ExportsOutputRefYogaGoVpcPublicSubnet1SubnetD3F314A23F3D8C9E": {
      "Value": {
        "Ref": "YogaGoVpcPublicSubnet1SubnetD3F314A2"
      },
      "Export": {
        "Name": "YogaGoNetworkStack:ExportsOutputRefYogaGoVpcPublicSubnet1SubnetD3F314A23F3D8C9E"
      }
    },
    "ExportsOutputRefYogaGoVpcPublicSubnet2SubnetB712836A30A7A460": {
      "Value": {
        "Ref": "YogaGoVpcPublicSubnet2SubnetB712836A"
      },
      "Export": {
        "Name": "YogaGoNetworkStack:ExportsOutputRefYogaGoVpcPublicSubnet2SubnetB712836A30A7A460"
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  ["1", "2", "3", "4", "5"],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
